Fixed issue with play button not showing on mobile

--- a/main.css
+++ b/main.css
@@ -81,6 +81,9 @@ html, body{
   .col-4 {
     width: 100%;
   }
+  .icons{
+    opacity: .5
+  }
 }
 .hidden{
   display:none;
